--- a/Web/Bookworm.Web/Views/_ViewImports.cshtml
+++ b/Web/Bookworm.Web/Views/_ViewImports.cshtml
@@ -5,5 +5,6 @@
 @using Bookworm.Web.ViewModels.Quotes
 @using Bookworm.Web.ViewModels.Categories
 @using Bookworm.Web.ViewModels.Books
+@using Bookworm.Web.ViewModels.Comments
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Bookworm.Web
