Implemented User Profile Picture Logic

--- a/Web/Bookworm.Web/Views/Book/All.cshtml
+++ b/Web/Bookworm.Web/Views/Book/All.cshtml
@@ -4,8 +4,8 @@
     this.ViewData["Title"] = "Books";
 }
 
-<div class="text-center textContainer ">
-    <h1 class="display-4 ">@Model.CategoryName</h1>
+<div class="text-center textContainer col-7">
+    <h1 class="display-4">@Model.CategoryName</h1>
 </div>
 <hr />
 
