--- a/Web/Bookworm.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -4,27 +4,37 @@
     ViewData["Title"] = "Profile";
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
-
-<h4>@ViewData["Title"]</h4>
+<h4 class="text-center">@ViewData["Title"]</h4>
 <partial name="_StatusMessage" model="Model.StatusMessage" />
 <div class="row">
+    @if (@Model.ProfilePictureUrl != null)
+    {
+        <img src=@Model.ProfilePictureUrl style="border-radius:50%;width:15rem;">
+    }
+
     <div class="col-md-6">
-        <form id="profile-form" method="post">
+        <form id="profile-form" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Username"></label>
                 <input asp-for="Username" class="form-control" disabled />
             </div>
             <div class="form-group">
+                <label asp-for="Input.ProfilePictureFile" class="form-label"></label>
+                <input asp-for="Input.ProfilePictureFile" class="form-control" type="file">
+            </div>
+            <div class="form-group">
                 <label asp-for="Input.PhoneNumber"></label>
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
-            <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
+            <div class="text-center">
+                <button id="update-profile-button" type="submit" class="btn">Update Profile</button>
+            </div>
         </form>
     </div>
 </div>
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+<partial name="_ValidationScriptsPartial" />
 }
